a few spacing and responsiveness tweaks and bug fix

--- a/src/components/BicepParticle/BicepParticle.scss
+++ b/src/components/BicepParticle/BicepParticle.scss
@@ -3,4 +3,5 @@
   top: -20px;
   right: -20px;
   z-index: 100;
+  font-size: $ultra;
 }
