--- a/src/components/NewGameForm/NewGameForm.scss
+++ b/src/components/NewGameForm/NewGameForm.scss
@@ -1,5 +1,5 @@
 .NewGameForm {
-  width: 50%;
+  width: 20rem;
   display: flex;
   flex-direction: column;
 
