--- a/src/components/PlayerRow/PlayerRow.scss
+++ b/src/components/PlayerRow/PlayerRow.scss
@@ -1,6 +1,6 @@
 .PlayerRow {
   padding: 5px;
-  border: 5px solid $gainsvilleFurnitureDark;
+  border: 0.2rem solid $gainsvilleFurnitureDark;
   border-radius: 10px;
   background: $gainsvilleFurniture;
   display: flex;
