--- a/src/components/ProgressCount/ProgressCount.scss
+++ b/src/components/ProgressCount/ProgressCount.scss
@@ -1,6 +1,6 @@
 .ProgressCount {
   z-index: 1;
-  padding: 0.417rem;
+  padding: 0.2rem;
   border-radius: 0 5px 5px 0;
   display: flex;
   justify-content: center;
@@ -10,6 +10,6 @@
 
   span {
     text-align: center;
-    width: 3.2rem;
+    width: 3.5rem;
   }
 }
