--- a/src/pages/GamePage/GamePage.scss
+++ b/src/pages/GamePage/GamePage.scss
@@ -4,7 +4,7 @@
   }
   
   .PlayerRow {
-    margin: 0.833rem 0;
+    margin: 0.5rem 0;
   }
 
   .label-btn-container {
