--- a/src/styles/inputs.scss
+++ b/src/styles/inputs.scss
@@ -1,5 +1,10 @@
 input {
   box-sizing: border-box;
+  font-size: $xSmall;
+
+  @include bp(tablet) {
+    font-size: $medium;
+  }
 
   &:focus {
     outline: 0;
